--- a/.coveragerc
+++ b/.coveragerc
@@ -1,8 +1,9 @@
 [run]
 branch = yes
-source = xml_patch
 
 [report]
 skip_covered = yes
 show_missing = yes
-skip_empty = yes
+exclude_lines =
+    pragma: no cover
+    if __name__ == .__main__.:
